--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                 <td><textarea name="message" ros="10" id="message" required></textarea></td>
             </tr>
             <tr>
-                <td colspan="2"><button type="submit">Submit</button></td>
+                <td colspan="2"><button type="submit" name="submit">Submit</button></td>
             </tr>
         </table>
     </form>     
